<resources>
    <string name="app_name">Freshbakery</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="order_history">Order History</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">OpenDrawer</string>
    <string name="navigation_drawer_close">CloseDrawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No</string>
    <string name="update">update</string>
    <string name="products">Products</string>
    <string name="email_id">Email id</string>
    <string name="vehicle">Vehicle</string>
</resources>