<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"

            />
        <item
            android:id="@+id/profile_menu"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/order_menu"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/order_history"
           />
        <item
            android:id="@+id/logout_menu"
            android:icon="@drawable/baseline_power_settings_new_24"
            android:title="@string/logout"
            />
    </group>

</menu>